--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -8,6 +8,10 @@
   /*background: #F7F6F6; color: #fff;*/
 /*}*/
 
+body {
+  margin: 0;
+}
+
 html, body {
   font-family: Roboto,'Helvetica Neue', sans-serif;
 }
