--- a/client/src/app/header/header.component.css
+++ b/client/src/app/header/header.component.css
@@ -34,9 +34,27 @@
   flex-direction: row;
 }
 
+
 #link{
   margin: 20px;
   color:white
+}
+
+/*
+#container{
+  width:100.97% !important;
+  margin-left: -10px;
+  margin-top: -10px;
+}
+*/
+
+#toolbar{
+  position:sticky;
+  top: 0;
+  
+}
+body {
+  margin: 0;
 }
 
 @media print{
@@ -44,3 +62,4 @@
     visibility: hidden;
   }
 }
+
