barre de navigation avec couleur de la page active
+correction faure d'autographe

--- a/client/src/app/header/header.component.css
+++ b/client/src/app/header/header.component.css
@@ -33,6 +33,9 @@
   flex-direction: row;
 }
 
+.active{
+  color: #41AAE6 !important;
+}
 
 #link{
   margin: 20px;
@@ -61,4 +64,7 @@ body {
     visibility: hidden;
   }
 }
+
+
+
 
