--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -3,10 +3,10 @@
   <div>
     <div class="searchBarDiv">
       <mat-form-field floatLabel="never" class="searchBarFieldAuteur">
-        <input matInput [(ngModel)]="searchName" placeholder="Auteur..." [formControl]="form" [matAutocomplete]="auto">
+        <input matInput [(ngModel)]="searchAutocompleteName" placeholder="Auteur..." [formControl]="form" [matAutocomplete]="auto">
         <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [displayWith]="displayFn">
           <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-            {{option.firstName}} {{option.lastName}}: {{option.email}}
+            {{option.firstName}} {{option.lastName}}
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
