--- a/client/src/app/templates/annexe/annexe.component.css
+++ b/client/src/app/templates/annexe/annexe.component.css
@@ -180,10 +180,12 @@ mat-form-field {
     
     #tout {
         
-        width: 95% !important;
+        max-width:90% !important;
         /*display:none !important;*/
+        
     }
 
+    
 
 
 
@@ -200,7 +202,8 @@ mat-form-field {
         text-align: left;
     }
 
-    #ventilation-table {transform: scale(.7);
+    #ventilation-table {
+        
         float:center !important;
     }
 
