Améliorer l'ajout d'un compte #38

--- a/client/src/app/admin/new-account/new-account.component.css
+++ b/client/src/app/admin/new-account/new-account.component.css
@@ -44,3 +44,7 @@ button {
     color: red;
     text-align: center;
 }
+
+.mat-progress-spinner /deep/circle, .mat-spinner /deep/circle {
+    stroke: #066dab;
+}
