--- a/client/src/app/admin/new-account/new-account.component.html
+++ b/client/src/app/admin/new-account/new-account.component.html
@@ -45,4 +45,5 @@
     [disabled]="!enableAddAccount()">AJOUTER</button>
   </div>
   <p id="message" *ngIf="errorMessage">{{ errorMessage }}</p>
+  <mat-spinner *ngIf="displaySpinner"></mat-spinner>
 </form>
