--- a/client/src/app/templates/demande-achat/demande-achat.component.html
+++ b/client/src/app/templates/demande-achat/demande-achat.component.html
@@ -324,8 +324,8 @@
       </div>
   </span>
 </div>
-<div class="section-rectangle">
-    <div>
+<div class="section-rectangle finance">
+    <div id="service-finances">
         <p>Réservé au service des finances</p>
         <mat-form-field>
             <input matInput type="text" placeholder="RÉFÉRENCE SAFIRH">
