Fixer l'affichage du header des forms lors de l'assignation #37

--- a/client/src/app/assignation/assignation.component.css
+++ b/client/src/app/assignation/assignation.component.css
@@ -54,7 +54,10 @@
 #metadata {
   display: flex;
   flex: row;
-  justify-content: space-between;
+}
+
+#form-title {
+  margin-left: 30%;
 }
 
 mat-form-field {
