--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -69,7 +69,7 @@
 }
 
 #a-completer-ligne {
-  width: 50%;
+  width: 45%;
 }
 
 /* ---------------   DÉBUT cartes   -------------- */
@@ -249,6 +249,12 @@
   font-weight: normal;
   padding: 5px;
   margin: 0;
+}
+
+.noResult {
+  color: #acacac;
+  font-weight: normal;
+  text-align: center;
 }
 
 #forms-table .mat-cell {
