Changer la couleur de sections assignées (plus claire) #37

--- a/client/src/app/templates/base-form.css
+++ b/client/src/app/templates/base-form.css
@@ -1,5 +1,5 @@
 div.assignation_assigned {
-    background-color: #aaaaaa;
+    background-color: #e8e8e8;
   }
 div.assignation_selected {
     background-color: #aedd94;
