--- a/client/src/app/edition/edition.component.css
+++ b/client/src/app/edition/edition.component.css
@@ -39,7 +39,7 @@
     margin-right: 1em;
     margin-top: 1em;
     width: 20%;
-    min-width: 15%;
+    min-width: 15%; 
   }
 
   .disabled {
@@ -50,8 +50,18 @@
     background-color: #aedd94
   }
 
-  button {
-    width: 95%;
+  #annuler, #print {
+    background: linear-gradient(to bottom, #eeeeee 0%,#cccccc 100%);
+  }
+
+  #valider, #soumettre {
+    color: black;
+    background: linear-gradient(to bottom, #e8f2db, #8dc83e);
+  }
+
+  #copier {
+    background: linear-gradient(to bottom, rgba(169,3,41,1) 0%,rgba(143,2,34,1) 44%,rgba(109,0,25,1) 100%);
+    color: white;
   }
 
   .mat-chip-list-stacked,
