Cacher les réglages admin

--- a/client/src/app/admin/profile/profile.component.html
+++ b/client/src/app/admin/profile/profile.component.html
@@ -2,7 +2,7 @@
     <mat-tab label="Administration des comptes">
       <app-accounts></app-accounts>
     </mat-tab>
-    <mat-tab label="Réglages">
+    <!-- <mat-tab label="Réglages">
       <app-settings></app-settings>
-    </mat-tab>
+    </mat-tab> -->
 </mat-tab-group>
