--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -594,6 +594,7 @@
     </div>
 
     <div *ngIf="!searchActivated && aCompleterCards.length == 0">
+      À compléter ({{aCompleterCards.length}})
       <div id="toggleViewButton">
         <button mat-icon-button (click)="toggleVueCarte()">
           <i class="material-icons">view_module</i>
@@ -689,6 +690,9 @@
     </div>
 
     <div *ngIf="!searchActivated && autresCards.length == 0">
+      Autres ({{autresCards.length}})
+      <hr id="a-completer-ligne">
+
       <h4 class="noResult">
         Aucun formulaire complété, archivé ou annulé
       </h4>
