[dashB] couleur pour que les users sachent que c'est un bouton
concern de Laurent

--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -75,6 +75,7 @@
 /* ---------------   DÉBUT cartes   -------------- */
 
 #toggleViewButton {
+  background: linear-gradient(#bbdeea, #367ec1);
   float: right;
 }
 
