[dashB] fix styling couleur et bouton circulaire
concern de Laurent

--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -74,7 +74,7 @@
 
 /* ---------------   DÉBUT cartes   -------------- */
 
-#toggleViewButton {
+.toggleViewButton {
   background: linear-gradient(#bbdeea, #367ec1);
   float: right;
 }
